[tool.poetry]
name = "people"
version = "0.1.0"
description = "People service"
authors = ["Collin Mutembei <collin@solublecode.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.110.1"
beanie = "^1.25.0"
fastapi-users = {version = "^13.0.0", extras = ["redis", "beanie", "oauth"]}
loguru = "^0.7.2"
python-decouple = "^3.8"
phonenumbers = "^8.13.34"
uvicorn = {version = "^0.29.0", extras = ["standard"]}
python-magic = "^0.4.27"
pandas = ">=2.0.0"
minio = "^7.2.5"
fastapi-mail = "^1.4.1"
pydantic-settings = "^2.2.1"
numpy = "^1.26.4"
fastui = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipython = "^8.18.1"
jsf = "^0.11.2"
pytest-asyncio = "^0.23.6"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
