[tool.poetry]
name = "people"
version = "0.1.0"
description = "People service"
authors = ["Collin Mutembei <collin@solublecode.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.111.1"
beanie = "^1.26.0"
fastapi-users = {version = "^13.0.0", extras = ["redis", "beanie", "oauth"]}
loguru = "^0.7.2"
python-decouple = "^3.8"
phonenumbers = "^8.13.40"
uvicorn = {version = "^0.30.1", extras = ["standard"]}
python-magic = "^0.4.27"
pandas = ">=2.0.0"
minio = "^7.2.7"
fastapi-mail = "^1.4.1"
pydantic-settings = "^2.3.4"
numpy = "^2.0.0"
fastui = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ipython = "^8.18.1"
jsf = "^0.11.2"
pytest-asyncio = "^0.23.7"
setuptools = "^70.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
