[tool.poetry]
name = "people"
version = "0.1.0"
description = "People service"
authors = ["Collin Mutembei <collin@solublecode.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.115.2"
beanie = "^1.26.0"
fastapi-users = {version = "^13.0.0", extras = ["redis", "beanie", "oauth"]}
loguru = "^0.7.2"
python-decouple = "^3.8"
phonenumbers = "^8.13.47"
uvicorn = {version = "^0.31.0", extras = ["standard"]}
python-magic = "^0.4.27"
pandas = ">=2.0.0"
minio = "^7.2.9"
fastapi-mail = "^1.4.1"
pydantic-settings = "^2.5.2"
numpy = "^2.0.2"
fastui = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipython = "^8.18.1"
jsf = "^0.11.2"
pytest-asyncio = "^0.24.0"
setuptools = "^75.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
